@@ -1,4 +1,8 @@
-﻿drkns 19.05.2016 19:03:12 +0200 - build 4682
+﻿drkns 20.05.2016 21:16:12 +0200 - build 4683
+
+1. #0003243 Пункты user-menu, в которых вызывается .cmd начали запускаються в отдельном окне.
+
+drkns 19.05.2016 19:03:12 +0200 - build 4682
 
 1. Уточнение 4679.
 
